NetBSD Problem Report #8439
Received: (qmail 20426 invoked from network); 18 Sep 1999 19:24:07 -0000
Message-Id: <199909181923.VAA09204@hiro.xon.net>
Date: Sat, 18 Sep 1999 21:23:57 +0200 (CEST)
From: wiz@danbala.ifoer.tuwien.ac.at
Reply-To: wiz@danbala.ifoer.tuwien.ac.at
To: gnats-bugs@gnats.netbsd.org
Subject: mv fails on moving directories from DOS partitions
X-Send-Pr-Version: 3.95
>Number: 8439
>Category: bin
>Synopsis: mv fails on moving directories from DOS partitions
>Confidential: no
>Severity: serious
>Priority: low
>Responsible: jdolecek
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Sep 18 12:35:01 +0000 1999
>Closed-Date: Mon Jul 31 08:48:35 +0000 2000
>Last-Modified: Mon Jul 31 08:48:35 +0000 2000
>Originator: Wiz
>Release: 1.4.1
>Organization:
>Environment:
System: NetBSD hiro.xon.net 1.4.1 NetBSD 1.4.1 (HIRO) #0: Tue Sep 14 19:22:33 CEST 1999 wiz@hiro.xon.net:/usr/src/sys/arch/i386/compile/HIRO i386
>Description:
When moving a directory 'test' from a mounted DOS partition to a NetBSD
partition, I get the following error:
mv: chflags: ./test: Operation not permitted
mv: /bin/cp: terminated with 1 (non-zero) status: No such file or directory
>How-To-Repeat:
cd
mount_msdos whatever /mnt
mkdir /mnt/test
mv /mnt/test .
>Fix:
>Release-Note:
>Audit-Trail:
From: Wiz <wiz@danbala.ifoer.tuwien.ac.at>
To: gnats-bugs@gnats.netbsd.org
Cc: Subject: bin/8439
Date: Sun, 19 Sep 1999 14:58:14 +0200
Just wanted to add that `mv` then also fails to delete the original
directory, though the copying went ok.
Thomas Klausner
Responsible-Changed-From-To: bin-bug-people->jdolecek
Responsible-Changed-By: jdolecek
Responsible-Changed-When: Thu Apr 27 04:25:29 PDT 2000
Responsible-Changed-Why:
I'll take care of this one. Also related is bin/9990.
State-Changed-From-To: open->feedback
State-Changed-By: jdolecek
State-Changed-When: Sun Jul 30 13:20:56 PDT 2000
State-Changed-Why:
A fix has been comitted to -current, it's rev. 1.102 of
syssrc/sys/msdosfs/msdosfs_vnops.c. Can you try it out
and tell me if it fixes the bug for you? (It worked for me).
From: Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>
To: jdolecek@netbsd.org
Cc: gnats-bugs@netbsd.org
Subject: Re: bin/8439
Date: Mon, 31 Jul 2000 00:48:33 +0200
Mutt made be believe that jdolecek@netbsd.org wrote:
> Synopsis: mv fails on moving directories from DOS partitions
> A fix has been comitted to -current, it's rev. 1.102 of
> syssrc/sys/msdosfs/msdosfs_vnops.c. Can you try it out
> and tell me if it fixes the bug for you? (It worked for me).
Yes, this solves the problem for me, too.
Thanks for fixing this! (And the others ;-) )
Thomas
--
Thomas Klausner - wiz@danbala.tuwien.ac.at
I think...I think it's in my basement. Let me go upstairs and check.
-- M.C. Escher (1898-1972)
State-Changed-From-To: feedback->closed
State-Changed-By: jdolecek
State-Changed-When: Mon Jul 31 01:48:04 PDT 2000
State-Changed-Why:
Fixed, thanks.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.