Pull up revision 1.102 (via patch, requested by jdolecek):   Do not report archived files as having SF_ARCHIVED set, as the   semantics between Unix and MS-DOS/Windows differ significantly   on how to interpret this flag.  Fixes PR#8439.